--- a/README.Rmd
+++ b/README.Rmd
@@ -20,6 +20,10 @@ knitr::opts_chunk$set(
 
 The goal of wmts is to ...
 
+
+NOT USEABLE yet
+
+
 ## TODO
 
 - [ ] need to deal with various inputs (how does ceramic do it, missing something atm)
