--- a/README.Rmd
+++ b/README.Rmd
@@ -44,8 +44,8 @@ library(wmts)
 
 ## note that input can be centre (longlat pt), buffer (km) or a spatial object (ignore buffer)
 ## output is a raster in World Mercator
-x <- wmts(u, centre, buffer = radius)
-raster::plotRGB(x)
+x <- wmts(u, centre, buffer = radius) ## zoom determined interactively, don't use a hardcoded zoom
+raster::plotRGB(x, interpolate = TRUE)
 #f <- system.file("gpkg/nc.gpkg", package = "sf", mustWork = TRUE)
 #sf <- sf::read_sf(f)
 #x <- wmts(u, sf)
@@ -55,7 +55,7 @@ names(tab) <- c("x", "y", "red", "green", "blue")
 tab$hex <- rgb(tab$red, tab$green, tab$blue, maxColorValue = 255)
 library(ggplot2)
 ggplot(tab, aes(x, y, fill = hex)) +
-  geom_raster() +
+  geom_raster(interpolate = TRUE) +
   coord_equal() +
   scale_fill_identity()
 ```
