handle different URL forms

--- a/README.Rmd
+++ b/README.Rmd
@@ -31,6 +31,7 @@ NOT USEABLE yet, watch out
 ## TODO
 
 - [x] need to deal with various inputs 
+- [x] fix URL forms (http/s vs WMTS:)
 - [ ] add providers
 
 ## Example
