--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,7 @@
 ---
 output: github_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -19,10 +21,10 @@ knitr::opts_chunk$set(
 [![Travis build status](https://travis-ci.org/mdsumner/wmts.svg?branch=master)](https://travis-ci.org/mdsumner/wmts)
 <!-- badges: end -->
 
-The goal of wmts is to ...
+The goal of wmts is to obtain imagery from WMTS image servers. See [GDAL for details on WMTS](https://gdal.org/drivers/raster/wmts.html). 
 
 
-NOT USEABLE yet, watch out
+## Beware
 
 * will create temporary files (gdalwmscache, and raster temp)
 * no checks for in-bounds for tiles
@@ -62,6 +64,22 @@ ggplot(tab, aes(x, y, fill = hex)) +
   scale_fill_identity()
 ```
 
+
+## Tasmania!
+
+Get a Tassie example. 
+
+```{r tassie}
+ext <- raster::extent(146, 148, -43, -40.5)
+u <- "WMTS:https://services.thelist.tas.gov.au/arcgis/rest/services/Basemaps/Topographic/MapServer/WMTS/1.0.0/WMTSCapabilities.xml,layer=Basemaps_Topographic,tilematrixset=default028mm"
+
+img <- wmts(u, loc = ext)
+raster::plotRGB(img, interpolate = TRUE)
+
+ortho <- wmts("https://services.thelist.tas.gov.au/arcgis/rest/services/Basemaps/Orthophoto/MapServer/WMTS/1.0.0/WMTSCapabilities.xml", raster::extent(147.125, 147.528, -43.054, -42.717), max_tiles = 16)
+raster::plotRGB(ortho, interpolate = TRUE)
+
+```
 --- 
 
 Please note that the wmts project is released with a [Contributor Code of Conduct](https://contributor-covenant.org/version/1/0/0/CODE_OF_CONDUCT.html). By contributing to this project, you agree to abide by its terms.
