--- a/README.Rmd
+++ b/README.Rmd
@@ -24,7 +24,7 @@ knitr::opts_chunk$set(
 
 The goal of wmts is to obtain imagery from online image servers. You can provide *any URL* with a `GetCapabilities.xml` and quickly get an image for any region at any resolution. 
 
-*Any URL*? Only Pseudo Mercator services tested so far, see examples below for success stories.  Please [file an issue]() or ping me [on twitter](https://twitter.com/mdsumner)
+*Any URL*? Only Pseudo Mercator services tested so far, see examples below for success stories.  Please [file an issue](https://github.com/mdsumner/wmts/issues) or ping me [on twitter](https://twitter.com/mdsumner) if you have wants/needs/suggestions/bug-fixes/high-fives.
 
 
 ## The wmts() function
